# sourccey-desktop

./: .env.example  .gitattributes  .gitignore  .gitmodules  README.md  bunfig.toml  next.config.js  package.json  pnpm-lock.yaml  prettier.config.js  tsconfig.json  voice_follow.py
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/migration/: Cargo.toml  fix_migration_history.sql
src-tauri/migration/src/: lib.rs  m20250109_000001_drop_cart_item_table.rs  m20250714_000601_initial_migration.rs  m20250715_000001_add_command_log_table.rs  m20250723_000001_add_training_run_table.rs  m20250724_000001_add_unique_nickname_index_to_owned_robot.rs  m20250725_000001_add_robot_type_to_robot.rs  m20250726_000001_add_command_log_foreign_key_indexes.rs  m20250727_000001_add_owned_robot_indexes.rs  m20260219_000001_drop_owned_robot_profile_id.rs  m20260219_000002_add_ai_model_table.rs  m20260220_000001_add_ai_model_metadata.rs  main.rs
src-tauri/resources/uv/: README.txt
src-tauri/src/: database.rs  main.rs  modules.rs  services.rs  utils.rs
src-tauri/src/database/: connection.rs  traits.rs
src-tauri/src/modules/: control.rs  sync.rs
src-tauri/src/modules/ai/: controllers.rs  services.rs  types.rs
src-tauri/src/modules/ai_model/: controllers.rs  models.rs
src-tauri/src/modules/control/: controllers.rs  services.rs
src-tauri/src/modules/log/: controllers.rs  models.rs  services.rs
src-tauri/src/services/: camera.rs  directory.rs  environment.rs  process.rs  setup.rs
src-tauri/src/tests/: main_tests.rs
src-tauri/src/utils/: pagination.rs  windows_process.rs
(+537 files in other folders)
