[package]
name = "sourccey"
version = "0.0.3"
description = "Sourccey Desktop Application"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sourccey_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.5"
os_pipe = "1.1"
dirs = "5.0"
russh = "0.43"
russh-keys = "0.43"
async-channel = "2.1"
lazy_static = "1.4"
async-trait = "0.1"

# Add parquet dependencies
parquet = "50"
arrow = "50"

# Updated SeaORM dependencies to v1.1
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-uuid", "with-chrono"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.7", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.35", features = ["serde"] }

# Add migration dependency
migration = { path = "migration" }

# Add HTTP client for API calls

[dev-dependencies]
sea-orm-cli = "1.1.13"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

